manifest/base/plugin-daemon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plugin-daemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plugin-daemon
  template:
    metadata:
      labels:
        app: plugin-daemon
    spec:
      containers:
        - name: plugin-daemon
          image: langgenius/dify-plugin-daemon:0.0.3-local
          ports:
            - containerPort: 5002
          volumeMounts:
            - name: plugin-daemon-storage
              mountPath: /app/storage
      volumes:
        - name: plugin-daemon-storage
          persistentVolumeClaim:
            claimName: plugin-daemon-storage

---
apiVersion: v1
kind: Service
metadata:
  name: plugin-daemon
spec:
  ports:
    - port: 5002
      targetPort: 5002
      name: daemon-port
    - port: 5003
      targetPort: 5003
      name: debug-port
  selector:
    app: plugin-daemon
