manifest/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: langgenius/dify-api:1.4.2
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: worker
spec:
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    app: worker
