manifest/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts:
        - "*.ouchiserver.aokiapp.com"
      secretName: service-tls
  rules:
    - host: dify.ouchiserver.aokiapp.com
      http:
        paths:
          - path: /console/api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5001
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5001
          - path: /files
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5001
          - path: /e/
            pathType: Prefix
            backend:
              service:
                name: plugin-daemon
                port:
                  number: 5002
          - path: /explore
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
